--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body {
 	microgear.connect(APPID);
 	
 </script>
-<div style="margin: 20px;"><img src="img/nectec_logo.png" style="vertical-align:bottom;width:150px;hight:35px;"></div>
+<div style="margin: 20px;"><img src="img/nectec_logo.png" style="vertical-align:bottom;width:150px;hight:35px;"></img></div>
 <center>
 	<div href="" class="cube-switch" id="cube-switch" onclick="switchPress()">
 		<span class="switch">
